--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@types/react": "^17.0.5",
     "prisma": "^2.22.1",
     "typescript": "^4.2.4"
+  },
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
   }
 }
